--- a/UserInterface/MainApplicationWindow.xaml
+++ b/UserInterface/MainApplicationWindow.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="Introspectator.UserInterface.Window1"
+﻿<Window x:Class="Introspectator.UserInterface.MainApplicationWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="Main Screen" Height="300" Width="642" Loaded="Window_Loaded">
+    Title="Main Screen" Height="450" Width="990" Loaded="Window_Loaded" Name="ApplicationWindow">
     <Grid>
         
     </Grid>
